<resources>

    <string name="app_name">作業六：楊信致</string>
    <string name="action_settings">Settings</string>

    <string name="player_win">恭喜，你贏了！</string>
    <string name="player_lose">很可惜，你輸了！</string>
    <string name="player_draw">雙方平手！</string>
    <string name="prompt_title">和電腦擲骰子</string>
    <string name="result">判定輸贏：</string>

    <string name="total_set">全部局數：</string>
    <string name="player_win_set">玩家贏：</string>
    <string name="comupter_win_set">電腦贏：</string>
    <string name="draw">平手：</string>

    <string name="btn_show_result1">顯示結果1</string>
    <string name="btn_show_result2">顯示結果2</string>
    <string name="btn_hidden_result">隱藏結果</string>

</resources>
