<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/prompt_title"
        android:textColor="#FF00FF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imgBtnDie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="148dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:src="@drawable/dice06" />


    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="187dp"
        android:text="@string/result"
        android:textColor="#0000FF"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgBtnDie"/>

    <Button
        android:id="@+id/btnShowResult1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnShowResult2"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_show_result1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnShowResult2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnHiddenResult"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_show_result2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnHiddenResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/btn_hidden_result"
        android:textSize="20sp" />

</RelativeLayout>
